<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.hhu</groupId>
  <artifactId>stateofstructure</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>stateofstructure</name>

<properties>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  <maven.compiler.release>21</maven.compiler.release>
</properties>

  <dependencies>


      <!-- Libary for visualization of Datastructures, Lightweight Java Visualizer-->
    <dependency>
      <groupId>org.atp-fivt</groupId>
      <artifactId>ljv</artifactId>
      <version>1.03</version>
    </dependency>

 <!-- Libary for Graph visualization. Graphviz Java-->
    <dependency>
      <groupId>guru.nidi</groupId>
      <artifactId>graphviz-java</artifactId>
      <version>0.18.1</version>
    </dependency>
    <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.2.13</version>
    </dependency>


    <!-- Libary for Graph visualization. Graphstream-->
    <dependency>
      <groupId>org.graphstream</groupId>
      <artifactId>gs-core</artifactId>
      <version>2.0</version>
    </dependency>
    <dependency>
      <groupId>org.graphstream</groupId>
      <artifactId>gs-ui-swing</artifactId>
      <version>2.0</version>
    </dependency>

  <!-- Libary for Code Formatting-->
    <dependency>
        <groupId>com.fifesoft</groupId>
        <artifactId>rsyntaxtextarea</artifactId>
        <version>3.3.3</version>
    </dependency>


    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
  <plugins>
<plugin>
  <groupId>org.codehaus.mojo</groupId>
  <artifactId>exec-maven-plugin</artifactId>
  <version>3.1.0</version>

  <configuration>
    <executable>java</executable>
    <arguments>
      <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
      <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
      <argument>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</argument>
      <argument>-cp</argument>
      <classpath/>
      <argument>com.hhu.GraphvizApp</argument>
    </arguments>
  </configuration>

  <executions>
    <execution>
      <id>run-app</id>
      <goals>
        <goal>java</goal>
      </goals>
    </execution>
  </executions>
</plugin>

<plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-shade-plugin</artifactId>
  <version>3.5.0</version>
  <executions>
    <execution>
      <phase>package</phase>
      <goals>
        <goal>shade</goal>
      </goals>
      <configuration>
        <transformers>
          <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
            <mainClass>com.hhu.GraphvizApp</mainClass>
          </transformer>
        </transformers>
      </configuration>
    </execution>
  </executions>
</plugin>


  </plugins>
</build>
</project>
